--- a/index.css
+++ b/index.css
@@ -2,6 +2,8 @@ body{
    background-color: #FF9900; 
 }
 
+
+
 #small-pod{
   width: 450px;
   height: 400px;
@@ -22,3 +24,11 @@ body{
   padding: 30px;
   background-color: aliceblue;
 }
+
+
+.station-container{
+  width: 850px;
+  height: 400px;
+  background-color: blueviolet;
+}
+
